--- a/facade/.env
+++ b/facade/.env
@@ -1,2 +1,2 @@
-LOGGING_SERVICE_URL=http://logging:8000/
+LOGGING_SERVICE_URLS==http://logging-1:8000/,http://logging-2:8000/,http://logging-3:8000/
 MESSAGE_SERVICE_URL=http://message:8000/
