finish micro mq

--- a/facade/.env
+++ b/facade/.env
@@ -1,2 +1,4 @@
-LOGGING_SERVICE_URLS==http://logging-1:8000/,http://logging-2:8000/,http://logging-3:8000/
-MESSAGE_SERVICE_URL=http://message:8000/
+LOGGING_SERVICE_URLS=http://logging-1:8000/,http://logging-2:8000/,http://logging-3:8000/
+MESSAGE_SERVICE_URLS=http://message-1:8000/,http://message-2:8000/
+KAFKA_SERVER_URL=kafka-server:9092
+KAFKA_TOPIC=message
