--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,24 +10,83 @@ services:
     env_file:
       - ./facade/.env
     depends_on:
-      - message
+      - message-1
+      - message-2
       - logging-1
       - logging-2
       - logging-3
     networks:
-      - hz-net
+      - docker-net
 
-  message:
+  message-1:
     build:
       context: ./message
       dockerfile: Dockerfile
-    container_name: message
+    container_name: message-1
     ports:
       - "8001:8000"
     env_file:
       - ./message/.env
+    depends_on:
+      - kafka-server
     networks:
-      - hz-net
+      - docker-net
+  
+  message-2:
+    build:
+      context: ./message
+      dockerfile: Dockerfile
+    container_name: message-2
+    ports:
+      - "8002:8000"
+    env_file:
+      - ./message/.env
+    depends_on:
+      - kafka-server
+    networks:
+      - docker-net
+  
+  zookeeper:
+    image: bitnami/zookeeper:latest
+    container_name: zookeeper-server
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ALLOW_ANONYMOUS_LOGIN: yes
+    ports:
+      - 2181:2181
+    networks:
+      - docker-net
+  
+  kafka-server:
+    image: bitnami/kafka:latest
+    container_name: kafka-server
+    depends_on:
+      - zookeeper
+    ports:
+      - 9092:9092
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      ALLOW_PLAINTEXT_LISTENER: yes
+    networks:
+      - docker-net
+  
+  kafka-setup:
+    image: bitnami/kafka:latest
+    container_name: kafka-setup
+    restart: "no"
+    depends_on:
+      - kafka-server
+    entrypoint: [ '/bin/sh', '-c' ]
+    command: |
+      "
+      # blocks until kafka is reachable
+      kafka-topics --bootstrap-server kafka-server:9092 --list
+
+      kafka-topics --bootstrap-server kafka-server:9092 --create --if-not-exists --topic message
+      "
+    networks:
+      - docker-net
 
   logging-1:
     build:
@@ -35,13 +94,15 @@ services:
       dockerfile: Dockerfile
     container_name: logging-1
     ports:
-      - "8002:8000"
+      - "8005:8000"
     env_file:
       - ./logging/.env
     depends_on:
       - hz-1
+      - hz-2
+      - hz-3
     networks:
-      - hz-net
+      - docker-net
 
   logging-2:
     build:
@@ -49,13 +110,15 @@ services:
       dockerfile: Dockerfile
     container_name: logging-2
     ports:
-      - "8003:8000"
+      - "8006:8000"
     env_file:
       - ./logging/.env
     depends_on:
+      - hz-1
       - hz-2
+      - hz-3
     networks:
-      - hz-net
+      - docker-net
 
   logging-3:
     build:
@@ -63,13 +126,15 @@ services:
       dockerfile: Dockerfile
     container_name: logging-3
     ports:
-      - "8004:8000"
+      - "8007:8000"
     env_file:
       - ./logging/.env
     depends_on:
+      - hz-1
+      - hz-2
       - hz-3
     networks:
-      - hz-net
+      - docker-net
 
   hz-1:
     image: hazelcast/hazelcast:latest
@@ -77,7 +142,7 @@ services:
     ports:
     - "5701:5701"
     networks:
-    - hz-net
+    - docker-net
     environment:
     - HZ_CLUSTERNAME=hz-cluster
 
@@ -87,7 +152,7 @@ services:
     ports:
     - "5702:5701"
     networks:
-    - hz-net
+    - docker-net
     environment:
     - HZ_CLUSTERNAME=hz-cluster
 
@@ -97,21 +162,21 @@ services:
     ports:
     - "5703:5701"
     networks:
-    - hz-net
+    - docker-net
     environment:
     - HZ_CLUSTERNAME=hz-cluster
   
-  hz-mc:
-    image: hazelcast/management-center
-    container_name: hz-mc
-    environment:
-      - MC_CLUSTER_MEMBERS=hz-1,hz-2,hz-3
-      - HZ_CLUSTERNAME=hz-cluster
-    ports:
-      - "8080:8080"
-    networks:
-      - hz-net
+  # hz-mc:
+  #   image: hazelcast/management-center
+  #   container_name: hz-mc
+  #   environment:
+  #     - MC_CLUSTER_MEMBERS=hz-1,hz-2,hz-3
+  #     - HZ_CLUSTERNAME=hz-cluster
+  #   ports:
+  #     - "8080:8080"
+  #   networks:
+  #     - docker-net
 
 networks:
-  hz-net:
-    name: hz-net
+  docker-net:
+    name: docker-net
