--- a/facade/Dockerfile
+++ b/facade/Dockerfile
@@ -5,4 +5,5 @@ COPY requirements.txt /app/
 RUN pip install -r requirements.txt
 COPY . .
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["/bin/bash", "-c", "sleep 15 && uvicorn main:app --host 0.0.0.0 --port 8000"]
